tests/negative/semantic/for_condition_string/input.ci
void main() {
    for (int i = 0; "x"; i++) { print(toString(i) + "\n"); }
}
